if(NETWORKING_EMSCRIPTEN_BUILD)
  message(STATUS "Skipping server and NCurses client under emscripten build.")
else()
  add_subdirectory(server)
  if(NETWORKING_CLIENT_NCURSES)
    add_subdirectory(client-ncurses)
  endif()
endif()

if(NETWORKING_CLIENT_FLUTTER)
  add_subdirectory(client_flutter)
endif()

if(NETWORKING_CLIENT_FTXUI)
  add_subdirectory(client-ftxui)
endif()
